/***********************************************************************
X3 ChangeLog

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to reg_unreg_func and
	unreg_func_t.

	* src/chanserv.c src/mod-helpserv.c src/mod-memoserv.c: collateral
	evolution fixes due to unreg_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to reg_auth_func and
	auth_func_t.

	* src/chanserv.c src/mod-snoop.c src/global.c src/mod-helpserv.c
	src/opserv.c src/mod-memoserv.c src/mod-track.c: collateral evolution
	fixes due to auth_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/proto-common.c: add extra parameter to
	reg_user_mode_func and user_mode_func_t.

	* src/mod-snoop.c src/mod-track.c: collateral evolution fixes due to
	user_mode_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/proto-common.c: add extra parameter to
	reg_channel_mode_func and channel_mode_func_t.

	* src/chanserv.c src/mod-snoop.c src/mod-track.c: collateral evolution
	fixes due to channel_mode_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.c src/hash.h: add extra parameter to reg_kick_func and
	kick_func_t.

	* src/chanserv.c src/mod-snoop.c src/mod-track.c: collateral evolution
	fixes due to kick_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.c src/hash.h: add extra parameter to reg_part_func,
	unreg_part_func, and part_func_t.

	* src/chanserv.c src/mod-snoop.c src/mod-helpserv.c src/spamserv.c
	src/mod-track.c: collateral evolution fixes due to part_func change.

2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.c src/hash.h: add extra parameter to reg_del_channel_func and
	del_channel_func_t.

	* src/opserv.c src/proto-p10.c: collateral evolution fixes due to
	del_channel_func change.

2009-11-23  Matthew Beeching  <jobe@mdbnet.co.uk>
